[gd_scene load_steps=7 format=3 uid="uid://dqk78uqojko7p"]

[ext_resource type="Script" uid="uid://bbg2moh7g15b" path="res://scripts/experiments/plant/world.gd" id="1_pf1gy"]
[ext_resource type="PackedScene" uid="uid://b5vu1a3i4a0gb" path="res://objs/experiment/plant/pot.tscn" id="2_1fxnt"]
[ext_resource type="Texture2D" uid="uid://ddinrkbpewf21" path="res://assets/bg/default.jpg" id="2_amlhr"]
[ext_resource type="Script" uid="uid://dkk6iu66ynto0" path="res://scripts/scene_button.gd" id="2_i3m0g"]
[ext_resource type="Theme" uid="uid://cf5g8h6mhp6iu" path="res://assets/font/font.tres" id="3_i3m0g"]
[ext_resource type="PackedScene" uid="uid://bahnkrklwf445" path="res://objs/experiment/plant/overlay.tscn" id="4_7ju1j"]

[node name="Experiment1" type="Node2D"]
script = ExtResource("1_pf1gy")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -4096
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_right = 704.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_amlhr")
expand_mode = 1

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StartButton" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 57.0
theme = ExtResource("3_i3m0g")
text = "Start"

[node name="PauseButton" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 64.0
offset_right = 96.0
offset_bottom = 113.0
theme = ExtResource("3_i3m0g")
text = "Pause
"

[node name="Reset" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 280.0
offset_top = 64.0
offset_right = 368.0
offset_bottom = 113.0
theme = ExtResource("3_i3m0g")
text = "Reset
"

[node name="SceneButton" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 104.0
offset_top = 64.0
offset_right = 184.0
offset_bottom = 113.0
theme = ExtResource("3_i3m0g")
text = "Back"
script = ExtResource("2_i3m0g")
back_button = true
metadata/_custom_type_script = "uid://dkk6iu66ynto0"

[node name="Speed" type="HSlider" parent="HUD/Control"]
layout_mode = 0
offset_left = 120.0
offset_top = 16.0
offset_right = 248.0
offset_bottom = 32.0
theme = ExtResource("3_i3m0g")
min_value = 3.0
max_value = 20.0
step = 0.5
value = 3.0

[node name="SpeedLabel" type="Label" parent="HUD/Control/Speed"]
layout_mode = 0
offset_top = 16.0
offset_right = 40.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Speed"

[node name="Label2" type="Label" parent="HUD/Control/Speed"]
layout_mode = 0
offset_left = 129.0
offset_top = -4.0
offset_right = 169.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "3 sec."

[node name="Info" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 192.0
offset_top = 64.0
offset_right = 272.0
offset_bottom = 113.0
theme = ExtResource("3_i3m0g")
text = "Info
"

[node name="Overlay" parent="HUD" instance=ExtResource("4_7ju1j")]
text = PackedStringArray("In this experiment, the user can \"plant\" a digital seed. The user can modify the amount of sunlight and water to experiment how each variable affect the plant growth.  The experiment will be saved in the “Projects”. “ Over a few animated \"days,\" the seed sprouts, a stem emerges, and leaves grow.  The user can check the project time to time. \nNote your observations. ")

[node name="Environment" type="Node2D" parent="."]

[node name="Pots" type="Node2D" parent="Environment"]

[node name="Pot" parent="Environment/Pots" instance=ExtResource("2_1fxnt")]
position = Vector2(112, 384)

[node name="Pot2" parent="Environment/Pots" instance=ExtResource("2_1fxnt")]
position = Vector2(320, 384)

[node name="Pot3" parent="Environment/Pots" instance=ExtResource("2_1fxnt")]
position = Vector2(528, 384)

[connection signal="pressed" from="HUD/Control/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HUD/Control/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="HUD/Control/Reset" to="." method="_on_reset_pressed"]
[connection signal="value_changed" from="HUD/Control/Speed" to="." method="_on_speed_value_changed"]
[connection signal="pressed" from="HUD/Control/Info" to="." method="_on_info_pressed"]
